Fixed some bugs on mobile design

--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -75,7 +75,7 @@
   }
 
   &__caption {
-    margin-top: 20px;
+    margin: 50px 0;
     text-align: center;
     h3 {
       @include breakpoint-less(small) {
