--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -38,7 +38,7 @@
       flex: 1;
       .hamburger {
         float: right;
-        margin-right: 20px;
+        margin-right: 0px;
       }
     }
 
